<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up">


    <ImageView
        android:id="@+id/signup_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/signup"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/signup_logo"
        android:layout_marginTop="30dp"
        android:layout_alignStart="@id/sign_up_layout" />

    <LinearLayout
        android:id="@+id/sign_up_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:padding="12dp"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_note"
            android:textSize="16sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_marginTop="20dp"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name"
            android:layout_width="316dp"
            android:layout_height="45dp"
            app:boxBackgroundColor="@null"
            android:hint="John">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:layout_marginTop="5dp"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name"
            android:layout_width="316dp"
            android:layout_height="45dp"
            app:boxBackgroundColor="@null"
            android:hint="John">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="5dp"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name"
            android:layout_width="316dp"
            android:layout_height="45dp"
            app:boxBackgroundColor="@null"
            android:hint="Johnwills">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="5dp"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_email"
            android:layout_width="316dp"
            android:layout_height="45dp"
            app:boxBackgroundColor="@null"
            android:hint="John">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="5dp"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userpassword"
            android:layout_width="316dp"
            android:layout_height="45dp"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="@null"
            android:hint="sparta7699">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="316dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in_account"
            android:textSize="16sp" />



    </LinearLayout>



</RelativeLayout>